fix: :art: adjust width and alignment of service returns section in footer for improved layout

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -37,11 +37,11 @@
     #service-retours {
         display: flex;
         justify-content: start;
-        width: 250px;
+        width: 240px;
         border: 1px solid var.$primary-color;
         border-radius: 50px;
-        align-items: center;
-        padding: 10px;
+        align-items: flex-start;
+        padding-top: 3px;
         @include mix.flex-center();
 
         a {
